refactor: UserValidator를 컴포넌트화하고 세부 오류 정보를 추가